# opencode-wt-ui

./: README.md  dbo.db  opencode-doc.md  opencode.rest
opencode-wt-ui/: .gitignore  AGENTS.md  CMakeLists.txt  wt_config.xml
opencode-wt-ui/scripts/: environment.sh  interactive.sh  utils.sh
opencode-wt-ui/scripts/app/: build.sh  interactive.sh  interactive_configuration.sh  run.sh
opencode-wt-ui/scripts/libs/wt/: build.sh  download.sh  install.sh  interactive.sh  interactive_configuration.sh  interactive_examples.sh  interactive_settings.sh  uninstall.sh
opencode-wt-ui/scripts/libs/wt/build_configurations/: debug.conf  default.conf  minimal.conf  release.conf
opencode-wt-ui/src/: main.cpp
opencode-wt-ui/src/000_Server/: Server.cpp  Server.h
opencode-wt-ui/src/001_App/: App.cpp  App.h
opencode-wt-ui/src/002_Dbo/: Session.cpp  Session.h
opencode-wt-ui/src/002_Dbo/Tables/: Permission.cpp  Permission.h  User.cpp  User.h
opencode-wt-ui/src/003_Auth/: AuthWidget.cpp  AuthWidget.h  RegistrationView.cpp  RegistrationView.h  UserDetailsModel.cpp
opencode-wt-ui/src/004_Theme/: DarkModeToggle.cpp  DarkModeToggle.h  Theme.cpp  Theme.h
opencode-wt-ui/src/005_Components/: DragBar.cpp  DragBar.h  MonacoEditor.cpp  MonacoEditor.h
opencode-wt-ui/src/006_Stylus/: Stylus.cpp  Stylus.h
opencode-wt-ui/src/007_Opencode/: Opencode.cpp  Opencode.h  Sessions.cpp  Sessions.h
opencode-wt-ui/static/0_stylus/tailwind/: input.css  package.json
opencode-wt-ui/static/0_stylus/xml/000_General/: General_components.xml
opencode-wt-ui/static/0_stylus/xml/001_Auth/: ovrwt-registration-view.xml
opencode-wt-ui/static/css/: tailwind.css  tailwind.minify.css
opencode-zudoku/: package-lock.json  package.json  zudoku.config.tsx
